task-1: add enriched observations, events, and impact links

--- a/notebooks/01_data_loading_and_overview.ipynb
+++ b/notebooks/01_data_loading_and_overview.ipynb
@@ -1198,6 +1198,366 @@
    "source": [
     "ref[\"field\"].value_counts()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73145aac",
+   "metadata": {},
+   "source": [
+    "## Unified Schema Overview\n",
+    "\n",
+    "This dataset uses a unified schema where all records share the same columns.\n",
+    "The `record_type` field determines how each row should be interpreted:\n",
+    "\n",
+    "- observation: actual measured values (survey, operator, infrastructure)\n",
+    "- event: policies, product launches, market entries, milestones\n",
+    "- impact_link: modeled relationships between events and indicators\n",
+    "- target: official policy targets\n",
+    "\n",
+    "Events are intentionally not assigned to Access or Usage pillars.\n",
+    "Their effects are modeled explicitly via impact_link records.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f86f41ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "record_type\n",
+       "event          10\n",
+       "observation    30\n",
+       "target          3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"record_type\").size()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2cd1aee9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "indicator_code\n",
+       "ACC_OWNERSHIP         6\n",
+       "ACC_FAYDA             3\n",
+       "ACC_MM_ACCOUNT        2\n",
+       "ACC_4G_COV            2\n",
+       "USG_P2P_COUNT         2\n",
+       "GEN_GAP_ACC           2\n",
+       "ACC_MOBILE_PEN        1\n",
+       "USG_P2P_VALUE         1\n",
+       "USG_ATM_COUNT         1\n",
+       "USG_ATM_VALUE         1\n",
+       "USG_CROSSOVER         1\n",
+       "USG_TELEBIRR_USERS    1\n",
+       "USG_TELEBIRR_VALUE    1\n",
+       "USG_MPESA_USERS       1\n",
+       "USG_MPESA_ACTIVE      1\n",
+       "USG_ACTIVE_RATE       1\n",
+       "AFF_DATA_INCOME       1\n",
+       "GEN_MM_SHARE          1\n",
+       "GEN_GAP_MOBILE        1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"record_type\"] == \"observation\"][\"indicator_code\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9f61e4cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "min    2014-12-31\n",
+       "max    2025-12-31\n",
+       "Name: observation_date, dtype: str"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"record_type\"] == \"observation\"][\"observation_date\"].agg([\"min\", \"max\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6e079005",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>record_id</th>\n",
+       "      <th>category</th>\n",
+       "      <th>period_start</th>\n",
+       "      <th>period_end</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>original_text</th>\n",
+       "      <th>source_name</th>\n",
+       "      <th>confidence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>EVT_0001</td>\n",
+       "      <td>product_launch</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>First major mobile money service in Ethiopia</td>\n",
+       "      <td>Ethio Telecom</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>EVT_0002</td>\n",
+       "      <td>market_entry</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>End of state telecom monopoly</td>\n",
+       "      <td>News</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>EVT_0003</td>\n",
+       "      <td>product_launch</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Second mobile money entrant</td>\n",
+       "      <td>Safaricom</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>EVT_0004</td>\n",
+       "      <td>infrastructure</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>National biometric digital ID system</td>\n",
+       "      <td>NIDP</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>EVT_0005</td>\n",
+       "      <td>policy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Birr float introduced</td>\n",
+       "      <td>NBE</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>EVT_0006</td>\n",
+       "      <td>milestone</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Historic: digital &gt; cash for first time</td>\n",
+       "      <td>EthSwitch</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>EVT_0007</td>\n",
+       "      <td>partnership</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Full interoperability for M-Pesa</td>\n",
+       "      <td>EthSwitch</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>EVT_0008</td>\n",
+       "      <td>infrastructure</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>National real-time payment system</td>\n",
+       "      <td>NBE/EthSwitch</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>EVT_0009</td>\n",
+       "      <td>policy</td>\n",
+       "      <td>2021-09-01</td>\n",
+       "      <td>2025-06-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5-year national financial inclusion strategy</td>\n",
+       "      <td>NBE</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>EVT_0010</td>\n",
+       "      <td>pricing</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Data and voice prices increased 20-82%</td>\n",
+       "      <td>News</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   record_id        category period_start  period_end  notes                                 original_text  \\\n",
+       "33  EVT_0001  product_launch          NaN         NaN    NaN  First major mobile money service in Ethiopia   \n",
+       "34  EVT_0002    market_entry          NaN         NaN    NaN                 End of state telecom monopoly   \n",
+       "35  EVT_0003  product_launch          NaN         NaN    NaN                   Second mobile money entrant   \n",
+       "36  EVT_0004  infrastructure          NaN         NaN    NaN          National biometric digital ID system   \n",
+       "37  EVT_0005          policy          NaN         NaN    NaN                         Birr float introduced   \n",
+       "38  EVT_0006       milestone          NaN         NaN    NaN       Historic: digital > cash for first time   \n",
+       "39  EVT_0007     partnership          NaN         NaN    NaN              Full interoperability for M-Pesa   \n",
+       "40  EVT_0008  infrastructure          NaN         NaN    NaN             National real-time payment system   \n",
+       "41  EVT_0009          policy   2021-09-01  2025-06-30    NaN  5-year national financial inclusion strategy   \n",
+       "42  EVT_0010         pricing          NaN         NaN    NaN        Data and voice prices increased 20-82%   \n",
+       "\n",
+       "      source_name confidence  \n",
+       "33  Ethio Telecom       high  \n",
+       "34           News       high  \n",
+       "35      Safaricom       high  \n",
+       "36           NIDP       high  \n",
+       "37            NBE       high  \n",
+       "38      EthSwitch       high  \n",
+       "39      EthSwitch       high  \n",
+       "40  NBE/EthSwitch       high  \n",
+       "41            NBE       high  \n",
+       "42           News       high  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"record_type\"] == \"event\"][\n",
+    "    [\n",
+    "        \"record_id\",\n",
+    "        \"category\",\n",
+    "        \"period_start\",\n",
+    "        \"period_end\",\n",
+    "        \"notes\",\n",
+    "        \"original_text\",\n",
+    "        \"source_name\",\n",
+    "        \"confidence\"\n",
+    "    ]\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1ae9d4b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['record_id',\n",
+       " 'record_type',\n",
+       " 'category',\n",
+       " 'pillar',\n",
+       " 'indicator',\n",
+       " 'indicator_code',\n",
+       " 'indicator_direction',\n",
+       " 'value_numeric',\n",
+       " 'value_text',\n",
+       " 'value_type',\n",
+       " 'unit',\n",
+       " 'observation_date',\n",
+       " 'period_start',\n",
+       " 'period_end',\n",
+       " 'fiscal_year',\n",
+       " 'gender',\n",
+       " 'location',\n",
+       " 'region',\n",
+       " 'source_name',\n",
+       " 'source_type',\n",
+       " 'source_url',\n",
+       " 'confidence',\n",
+       " 'related_indicator',\n",
+       " 'relationship_type',\n",
+       " 'impact_direction',\n",
+       " 'impact_magnitude',\n",
+       " 'impact_estimate',\n",
+       " 'lag_months',\n",
+       " 'evidence_basis',\n",
+       " 'comparable_country',\n",
+       " 'collected_by',\n",
+       " 'collection_date',\n",
+       " 'original_text',\n",
+       " 'notes']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns.tolist()\n"
+   ]
   }
  ],
  "metadata": {
