--- a/notebooks/01_data_loading_and_overview.ipynb
+++ b/notebooks/01_data_loading_and_overview.ipynb
@@ -1939,6 +1939,149 @@
     "df[\"pillar\"].unique()\n",
     "df[\"record_type\"].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f9c82967",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((43, 34),\n",
+       "   record_id  record_type category  pillar               indicator indicator_code indicator_direction  value_numeric  \\\n",
+       " 0  REC_0001  observation      NaN  ACCESS  Account Ownership Rate  ACC_OWNERSHIP       higher_better           22.0   \n",
+       " 1  REC_0002  observation      NaN  ACCESS  Account Ownership Rate  ACC_OWNERSHIP       higher_better           35.0   \n",
+       " 2  REC_0003  observation      NaN  ACCESS  Account Ownership Rate  ACC_OWNERSHIP       higher_better           46.0   \n",
+       " 3  REC_0004  observation      NaN  ACCESS  Account Ownership Rate  ACC_OWNERSHIP       higher_better           56.0   \n",
+       " 4  REC_0005  observation      NaN  ACCESS  Account Ownership Rate  ACC_OWNERSHIP       higher_better           36.0   \n",
+       " \n",
+       "   value_text  value_type unit observation_date period_start period_end fiscal_year  gender  location  region  \\\n",
+       " 0        NaN  percentage    %       2014-12-31          NaN        NaN        2014     all  national     NaN   \n",
+       " 1        NaN  percentage    %       2017-12-31          NaN        NaN        2017     all  national     NaN   \n",
+       " 2        NaN  percentage    %       2021-12-31          NaN        NaN        2021     all  national     NaN   \n",
+       " 3        NaN  percentage    %       2021-12-31          NaN        NaN        2021    male  national     NaN   \n",
+       " 4        NaN  percentage    %       2021-12-31          NaN        NaN        2021  female  national     NaN   \n",
+       " \n",
+       "           source_name source_type                                         source_url confidence  related_indicator  \\\n",
+       " 0  Global Findex 2014      survey  https://www.worldbank.org/en/publication/globa...       high                NaN   \n",
+       " 1  Global Findex 2017      survey  https://www.worldbank.org/en/publication/globa...       high                NaN   \n",
+       " 2  Global Findex 2021      survey  https://www.worldbank.org/en/publication/globa...       high                NaN   \n",
+       " 3  Global Findex 2021      survey  https://www.worldbank.org/en/publication/globa...       high                NaN   \n",
+       " 4  Global Findex 2021      survey  https://www.worldbank.org/en/publication/globa...       high                NaN   \n",
+       " \n",
+       "    relationship_type  impact_direction  impact_magnitude  impact_estimate  lag_months  evidence_basis  \\\n",
+       " 0                NaN               NaN               NaN              NaN         NaN             NaN   \n",
+       " 1                NaN               NaN               NaN              NaN         NaN             NaN   \n",
+       " 2                NaN               NaN               NaN              NaN         NaN             NaN   \n",
+       " 3                NaN               NaN               NaN              NaN         NaN             NaN   \n",
+       " 4                NaN               NaN               NaN              NaN         NaN             NaN   \n",
+       " \n",
+       "   comparable_country collected_by collection_date         original_text  notes  \n",
+       " 0    Example_Trainee   2025-01-20             NaN         Baseline year    NaN  \n",
+       " 1    Example_Trainee   2025-01-20             NaN                   NaN    NaN  \n",
+       " 2    Example_Trainee   2025-01-20             NaN                   NaN    NaN  \n",
+       " 3    Example_Trainee   2025-01-20             NaN  Gender disaggregated    NaN  \n",
+       " 4    Example_Trainee   2025-01-20             NaN  Gender disaggregated    NaN  )"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "RAW_PATH = \"../data/raw/ethiopia_fi_unified_data.csv\"\n",
+    "PROCESSED_PATH = \"../data/processed/ethiopia_fi_unified_data_enriched.csv\"\n",
+    "\n",
+    "raw_df = pd.read_csv(RAW_PATH)\n",
+    "\n",
+    "raw_df.shape, raw_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "fb465ac4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(set(), set())"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "EXPECTED_COLUMNS = [\n",
+    "    'record_id','record_type','category','pillar','indicator','indicator_code',\n",
+    "    'indicator_direction','value_numeric','value_text','value_type','unit',\n",
+    "    'observation_date','period_start','period_end','fiscal_year','gender',\n",
+    "    'location','region','source_name','source_type','source_url','confidence',\n",
+    "    'related_indicator','relationship_type','impact_direction','impact_magnitude',\n",
+    "    'impact_estimate','lag_months','evidence_basis','comparable_country',\n",
+    "    'collected_by','collection_date','original_text','notes'\n",
+    "]\n",
+    "\n",
+    "missing = set(EXPECTED_COLUMNS) - set(raw_df.columns)\n",
+    "extra = set(raw_df.columns) - set(EXPECTED_COLUMNS)\n",
+    "\n",
+    "missing, extra\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "fda93976",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = raw_df.copy()\n",
+    "\n",
+    "# Explicit ISO date parsing (YYYY-MM-DD only)\n",
+    "date_cols = [\"observation_date\", \"period_start\", \"period_end\", \"collection_date\"]\n",
+    "\n",
+    "for col in date_cols:\n",
+    "    df[col] = pd.to_datetime(\n",
+    "        df[col],\n",
+    "        format=\"%Y-%m-%d\",\n",
+    "        errors=\"coerce\"\n",
+    "    )\n",
+    "\n",
+    "# Numeric\n",
+    "df[\"value_numeric\"] = pd.to_numeric(df[\"value_numeric\"], errors=\"coerce\")\n",
+    "\n",
+    "# Normalize categorical text\n",
+    "df[\"pillar\"] = df[\"pillar\"].str.lower()\n",
+    "df[\"record_type\"] = df[\"record_type\"].str.lower()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f0737b1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed dataset saved to ../data/processed/ethiopia_fi_unified_data_enriched.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.to_csv(PROCESSED_PATH, index=False)\n",
+    "\n",
+    "print(f\"Processed dataset saved to {PROCESSED_PATH}\")\n"
+   ]
   }
  ],
  "metadata": {
